--- a/portal/src/main/webapp/diagnostico.html
+++ b/portal/src/main/webapp/diagnostico.html
@@ -30,103 +30,96 @@
 				<div id="cuerpoprincipal">
 					<div id="cajaformularios_diagnostico">
 						<form action="/oaw/basicServiceAction.do" method="post">
-      <p>El servicio on-line de diagn&oacute;stico de la Accesibilidad web remitir&aacute; en diferido, al correo electr&oacute;nico indicado, el informe de la web o código fuente analizado. Las peticiones son encoladas y procesadas progresivamente.</p>
-	  <p>Puede realizar el an&aacute;lisis de una p&aacute;gina web p&uacute;blica en Internet, o del c&oacute;digo fuente de una p&aacute;gina interna a la que el analizador no pueda acceder (por ejemplo una Intranet).</p>
-	  <p><strong>Nota:</strong> En caso de que rellene los campos URL y c&oacute;digo, se analizar&aacute; unicamente la URL.</p>
-      <p>
-<label for="url">
-<span style="font-weight: bold">URL del portal o p&aacute;gina a analizar:</span>
-<br/>
-      </label> <input id="url" name="url" size="80" type="text"/>
-</p>
-<p>
-<label for="codigo">
-<span style="font-weight: bold">C&oacute;digo fuente a analizar:</span>
-<br/>
-      </label> <textarea id="codigo" name="codigo" size="80" type="text" cols="80" rows="10"></textarea>
-</p>
+                            <p>El servicio on-line de diagn&oacute;stico de la Accesibilidad web remitir&aacute; en diferido, al correo electr&oacute;nico indicado, el informe de la web o c&oacute;digo fuente analizado. Las peticiones son encoladas y procesadas progresivamente.</p>
 
-      <p>
-<label for="correo">
-<span style="font-weight: bold">Correo eletr&oacute;nico:</span>
-</label>
-<br/>
-       <input id="correo" name="correo" size="80" type="text"/>
-</p>
-<fieldset style="border:1px solid #ccc;margin:0;">
-<legend>Opciones de rastreo</legend>
-      <p>La profundidad y la amplitud determinan cuantas p&aacute;ginas se analizar&aacute;n en el informe (profundidad*amplitud) y c&oacute;mo se hace la selecci&oacute;n aleatoria de &eacute;stas. Si se desea analizar una p&aacute;gina en concreto se puede indicar su URL y especificar profundidad=1 y amplitud=1</p>
-	  <p><strong>Nota:</strong> En el análisis de código fuente no es posible realizar un rastreo de páginas, por lo que en ese caso los campos de amplitud y profundidad serán ignorados.</p>
+                            <p>Puede realizar el an&aacute;lisis de una p&aacute;gina web p&uacute;blica en Internet, o del c&oacute;digo fuente de una p&aacute;gina interna a la que el analizador no pueda acceder (por ejemplo una Intranet o una p&aacute;gina que requiera autenticaci&oacute;n previa mediante certificado electr&oacute;nico).</p>
 
-      <p>
-<label for="profundidad">
-<span style="font-weight: bold">Profundidad:</span>
-</label> <select id="profundidad" name="profundidad">
-        <option selected="selected" value="1">
-          1
-        </option>
+                            <p><strong>Nota:</strong> En caso de que rellene los campos URL y c&oacute;digo, se analizar&aacute; unicamente la URL.</p>
+                            <p>
+                                <label for="url">
+                                    <span style="font-weight: bold">URL del portal o p&aacute;gina a analizar:</span>
+                                    <br/>
+                                </label> <input id="url" name="url" size="30" type="text"/>
+                            </p>
 
-        <option value="2">
-          2
-        </option>
+                            <p>
+                                <label for="content">
+                                    <span style="font-weight: bold">C&oacute;digo fuente a analizar:</span>
+                                    <br/>
+                                </label> <textarea cols="50" id="content" name="content" rows="10" size="30" type="text"> </textarea>
+                            </p>
 
-        <option value="3">
-          3
-        </option>
+                            <p>
+                                <label for="correo">
+                                    <span style="font-weight: bold">Correo eletr&oacute;nico:</span>
+                                </label>
+                                <br/>
+                                <input id="correo" name="correo" size="30" type="text"/>
+                            </p>
 
-        <option value="4">
-          4
-        </option>
-      </select>
-</p>
+                            <fieldset style="border-bottom: #ccc 1px solid; border-left: #ccc 1px solid; margin: 0px; border-top: #ccc 1px solid; border-right: #ccc 1px solid">
+                                <legend>Opciones de rastreo</legend>
 
-      <p>
-<label for="amplitud">
-<span style="font-weight: bold">Amplitud:</span>
-</label> <select id="amplitud" name="amplitud">
-        <option selected="selected" value="1">
-          1
-        </option>
+                                <p>La profundidad y la amplitud determinan cuantas p&aacute;ginas se analizar&aacute;n en el informe (profundidad*amplitud) y c&oacute;mo se hace la selecci&oacute;n aleatoria de &eacute;stas. Si se desea analizar una p&aacute;gina en concreto se puede indicar su URL y especificar profundidad=1 y amplitud=1</p>
 
-        <option value="2">
-          2
-        </option>
+                                <p>
+                                    <strong>Nota:</strong> En el an&aacute;lisis de c&oacute;digo fuente no es posible realizar un rastreo de p&aacute;ginas, por lo que en ese caso los campos de amplitud y profundidad ser&aacute;n ignorados.</p>
 
-        <option value="3">
-          3
-        </option>
+                                <p>
+                                    <label for="profundidad">
+                                        <span style="font-weight: bold">Profundidad:</span>
+                                    </label>
+                                    <select id="profundidad" name="profundidad">
+                                        <option selected="selected" value="1">1</option>
+                                        <option value="2">2</option>
+                                        <option value="3">3</option>
+                                        <option value="4">4</option>
+                                    </select>
+                                </p>
 
-        <option value="4">
-          4
-        </option>
-      </select>
-</p>
+                                <p>
+                                    <label for="amplitud">
+                                        <span style="font-weight: bold">Amplitud:</span>
+                                    </label>
+                                    <select id="amplitud" name="amplitud">
+                                        <option selected="selected" value="1">1</option>
+                                        <option value="2">2</option>
+                                        <option value="3">3</option>
+                                        <option value="4">4</option>
+                                </select>
+                                </p>
 
-<p>Si la URL contiene un directorio (por ejemplo http://www.dominio.com/directorio) y desea que todas las páginas rastreadas estén dentro de ese directorio, marque la siguiente opción.</p>
-<p><label for="inDirectory"><input type="checkbox" name="inDirectory" id="inDirectory" value="true" /> No rastrear fuera del directorio</label></p>
-</fieldset>
-<fieldset>
-  <legend>Tipo de informe</legend>
-      <p>El servicio de diagn&oacute;stico permite generar 2 informes distintos:</p>
+                                <p>Si desea que la selecci&oacute;n aleatoria de p&aacute;ginas se realice dentro del &uacute;ltimo &quot;directorio&quot; (hasta la &uacute;ltima &quot;/&quot;) indicado en la URL (por ejemplo http://www.dominio.com/directorio/pagina), marque la siguiente opci&oacute;n.</p>
 
-      <ul>
-        <li>El informe <strong>&quot;UNE&quot;</strong> analiza en profundidad todos los requisitos especificados en la norma UNE 139803 de prioridad 1 y 2.</li>
+                                <p>
+                                    <label for="inDirectory">
+                                        <input id="inDirectory" name="inDirectory" type="checkbox" value="true"/>
+                                    </label> <strong>
+                                    <label for="inDirectory">No rastrear fuera del directorio</label>
+                                </strong>
+                                </p>
+                            </fieldset>
 
-        <li>El informe <strong>&quot;Observatorio&quot;</strong>&nbsp;genera un informe conforme a la <a href="/webdav/site/ctt-map/users/memunnoz/public/Metodologia_Observatorio_Accesibilidad_AGE-v1_0.pdf" target="_blank" title="Metodolog&iacute;a del Observatorio de Accesibilidad (Se abre en ventana nueva)">metodolog&iacute;a&nbsp;del Observatorio de&nbsp;Accesibilidad</a> con el detalle de todos los errores producidos</li>
-      </ul>
+                            <p>El servicio de diagn&oacute;stico permite generar 2 informes distintos:.</p>
 
-      <p>
-	<span style="font-weight: bold">Informe:</span>
+                            <ul>
+                                <li>El informe <strong>&quot;Observatorio UNE 2004&quot;</strong>&nbsp;genera un informe conforme a la <a href="/webdav/site/ctt-map/users/memunnoz/public/Metodologia_Observatorio_Accesibilidad_AGE-v1_0.pdf" target="_blank" title="Metodolog&iacute;a del Observatorio de Accesibilidad (Se abre en ventana nueva)">metodolog&iacute;a&nbsp;del Observatorio de&nbsp;Accesibilidad</a>, basada en la UNE 139803:2004, con el detalle de todos los errores producidos.</li>
 
-	    <input checked="checked" id="informe-obs" name="informe" type="radio" value="observatorio-1"/> <label for="informe-obs">Observatorio UNE-2004</label>
-        <input checked="checked" id="informe-obs-nobroken" name="informe" type="radio" value="observatorio-1-nobroken"/> <label for="informe-obs-nobroken">Observatorio UNE-2004 (sin enlaces rotos)</label>
-        <input id="informe-obs-2012" name="informe" type="radio" value="observatorio-2"/> <label for="informe-obs-2012">Observatorio UNE-2012</label>
-	<!--<input id="informe-une" name="informe" type="radio" value="une"/> <label for="informe-une">UNE-2004</label>-->
-     </p>
-</fieldset>
+                                <li>Pr&oacute;ximamente, el informe &quot;Observatorio UNE 2012&quot; realizar&aacute; el mismo tipo de an&aacute;lisis pero basado en la UNE 139803:2012</li>
 
-      <p><input id="usuario" name="usuario" type="hidden" value="diagnostico"/> <input name="submit" type="submit" value="Enviar"/></p>
-    </form>
+                                <li>Las versiones <strong>&quot;sin enlaces rotos&quot;</strong> permiten una ejecuci&oacute;n m&aacute;s r&aacute;pida del&nbsp;servicio de diagn&oacute;stico ya que no realizan&nbsp;la verificaci&oacute;n de todos los enlaces existentes en&nbsp;la p&aacute;gina analizada.&nbsp;</li>
+                            </ul>
+
+                            <p>
+                                <span style="font-weight: bold">Informe:</span>
+                                <br/>
+                                <input checked="checked" id="informe-obs" name="informe" type="radio" value="observatorio-1"/> <label for="informe-obs">Observatorio UNE 2004</label> <input id="informe-obs-nobroken" name="informe" type="radio" value="observatorio-1-nobroken"/> <label for="informe-obs-nobroken">Observatorio UNE 2004 (sin enlaces rotos)</label>
+                            </p>
+
+                            <p>
+                                <input id="usuario" name="usuario" type="hidden" value="diagnostico"/> <input name="submit" type="submit" value="Solicitar informe"/>
+                            </p>
+                        </form>
 <script type="text/javascript">
 var userr=document.getElementById("usuario");
 userr.value=readCookie('Jesi_Template_Username');
