NEW: Comprobacion titulos distintos

--- a/portal/src/main/webapp/diagnostico.html
+++ b/portal/src/main/webapp/diagnostico.html
@@ -114,6 +114,8 @@
                                 <span style="font-weight: bold">Informe:</span>
                                 <br/>
                                 <input checked="checked" id="informe-obs" name="informe" type="radio" value="observatorio-1"/> <label for="informe-obs">Observatorio UNE 2004</label> <input id="informe-obs-nobroken" name="informe" type="radio" value="observatorio-1-nobroken"/> <label for="informe-obs-nobroken">Observatorio UNE 2004 (sin enlaces rotos)</label>
+                                <input checked="checked" id="informe-obs-2" name="informe" type="radio" value="observatorio-2"/> <label for="informe-obs-2">Observatorio UNE 2012</label>
+                                <input checked="checked" id="informe-obs-2-nobroken" name="informe" type="radio" value="observatorio-2-nobroken"/> <label for="informe-obs-2-nobroken">Observatorio UNE 2012 (sin enlaces rotos)</label>
                             </p>
 
                             <p>
