FIXED: Problemas en la localización y descripción (etiquetas) de errores

--- a/portal/src/main/webapp/diagnostico.html
+++ b/portal/src/main/webapp/diagnostico.html
@@ -4,6 +4,7 @@
 	<title>RASTREADOR WEB - Servicio de diagnóstico</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />	
 	<meta name="keywords" content="inteco,malware,rastreador" />
+    <meta name="version" content="v2.0.1" />
 	<link rel="stylesheet" type="text/css" href="styles/estilo.css" /> 
 	<link rel="icon" href="images/favicon.ico" type="image/x-icon" />
 </head>
