Changes reports logo and section 1.1 text

--- a/portal/src/main/webapp/diagnostico.html
+++ b/portal/src/main/webapp/diagnostico.html
@@ -12,7 +12,7 @@
 <body>
 <div id="cabeza">
 	<a href="http://www.minhap.gob.es/es-ES/Paginas/Home.aspx">
-		<img src="images/escudo.png" alt="MINHAP - Ministerio de Hacienda y Administraciones Públicas" />
+		<img src="images/mhfp.gif" alt="MHFP - Ministerio de Hacienda y Función Pública" />
 	</a>
 </div>
 <div class="language">
