Updates copyright text

--- a/portal/src/main/webapp/diagnostico.html
+++ b/portal/src/main/webapp/diagnostico.html
@@ -136,7 +136,7 @@ userr.value=readCookie('Jesi_Template_Username');
 	<div id="pie">
 		<div id="pIzq">&nbsp;</div>
 		<div id="creditos">
-			Copyright © 2014 - <span class="negrita"> Ministerio de Hacienda y Administraciones Públicas</span>
+			Copyright © 2014 - <span class="negrita"> Ministerio de Hacienda y Función Pública</span>
 		</div>
 	</div>
 </body>
