--- a/portal/src/main/webapp/diagnostico.html
+++ b/portal/src/main/webapp/diagnostico.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="es" lang="es">
 <head>
-    <title>RASTREADOR WEB - Servicio de diagnóstico</title>
+    <title>RASTREADOR WEB - Servicio de diagn&oacute;stico</title>
     <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1"/>
     <meta name="keywords" content="inteco,malware,rastreador"/>
     <meta name="version" content="3.5.0"/>
@@ -27,15 +27,14 @@
         <div id="migas">
             <p class="sr-only">Est&aacute; usted en</p>
             <ol class="breadcrumb">
-                <li class="active"><span class="glyphicon glyphicon-home" aria-hidden="true"></span>Servicio diagn&oacute;stico
-                </li>
+                <li class="active"><span class="glyphicon glyphicon-home" aria-hidden="true"></span>Servicio diagn&oacute;stico</li>
             </ol>
         </div>
 
         <div id="cajaformularios">
-            <h2>Servicio de diagnóstico</h2>
+            <h2>Servicio de diagn&oacute;stico</h2>
 
-            <form action="/oaw/conexion_oaw.jsp" method="post">
+            <form action="/oaw/conexion_oaw.jsp" method="post" enctype="multipart/form-data">
                 <p>El servicio on-line de diagn&oacute;stico de la Accesibilidad web remitir&aacute; en
                     diferido, al correo electr&oacute;nico indicado, el informe de la web o c&oacute;digo fuente
                     analizado. Las peticiones son encoladas y procesadas progresivamente.</p>
@@ -65,14 +64,6 @@
                                 background-color: #fff;
                             }
                             /* http://www.w3schools.com/css/css_tooltip.asp */
-
-
-
-
-
-
-
-
                 </style>
 
 
@@ -139,7 +130,7 @@
                 </style>
 
                 <fieldset class="servicioAccesibilidad">
-                    <legend>Seleccionar el tipo de análisis</legend>
+                    <legend>Seleccionar el tipo de an&aacute;lisis</legend>
                     <ul>
                         <li class="col-sm-3">
                             <div class="form-inline">
@@ -149,9 +140,9 @@
                             </div>
                             <p>Analiza un sitio web a partir de una URL.
                                 <span data-toggle="tooltip" tabindex="0"
-                                      title="Análisis online de la/s página/s de un sitio web público en Internet a partir de una URL inicial.">
+                                      title="An&aacute;lisis online de la/s p&aacute;gina/s de un sitio web p&uacute;blico en Internet a partir de una URL inicial.">
                                     <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
-                                    <span class="tooltiptext sr-only">Análisis online de la/s página/s de un sitio web público en Internet a partir de una URL inicial.</span>
+                                    <span class="tooltiptext sr-only">An&aacute;lisis online de la/s p&aacute;gina/s de un sitio web p&uacute;blico en Internet a partir de una URL inicial.</span>
                                 </span>
                             </p>
                         </li>
@@ -162,22 +153,22 @@
                             </div>
                             <p>Analiza un conjunto cerrado de URLs.
                                 <span data-toggle="tooltip" tabindex="0"
-                                      title="Análisis online de un conjunto predefinido de páginas de un sitio web público en Internet.">
+                                      title="An&aacute;lisis online de un conjunto predefinido de p&aacute;ginas de un sitio web p&uacute;blico en Internet.">
                                     <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
-                                    <span class="tooltiptext sr-only">Análisis online de un conjunto predefinido de páginas de un sitio web público en Internet.</span>
+                                    <span class="tooltiptext sr-only">An&aacute;lisis online de un conjunto predefinido de p&aacute;ginas de un sitio web p&uacute;blico en Internet.</span>
                                 </span>
                             </p>
                         </li>
                         <li class="col-sm-3">
                             <div class="form-inline">
-                                <input type="radio" name="type" id="radio-3" class="radio" value="código_fuente"/>
-                                <label for="radio-3">Código fuente</label>
+                                <input type="radio" name="type" id="radio-3" class="radio" value="c&oacute;digo_fuente"/>
+                                <label for="radio-3">C&oacute;digo fuente</label>
                             </div>
-                            <p>Analiza el código fuente introducido
+                            <p>Analiza el c&oacute;digo fuente introducido
                                 <span data-toggle="tooltip" tabindex="0"
-                                      title="Análisis del código fuente de una página (p. ej. página de una Intranet a la que el analizador no pueda acceder).">
+                                      title="An&aacute;lisis del c&oacute;digo fuente de una p&aacute;gina (p. ej. p&aacute;gina de una Intranet a la que el analizador no pueda acceder).">
                                     <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
-                                    <span class="tooltiptext sr-only">Análisis del código fuente de una página (p. ej. página de una Intranet a la que el analizador no pueda acceder).</span>
+                                    <span class="tooltiptext sr-only">An&aacute;lisis del c&oacute;digo fuente de una p&aacute;gina (p. ej. p&aacute;gina de una Intranet a la que el analizador no pueda acceder).</span>
                                 </span>
                             </p>
                         </li>
@@ -208,24 +199,21 @@
                 </script>
 
                 <fieldset class="servicioAccesibilidad" id="crawler">
-                    <legend>Análisis de sitio web</legend>
+                    <legend>An&aacute;lisis de sitio web</legend>
                     <div>
                         <p class="form-inline">
                             <label for="url">
                                 <spanclass
-                                ="bold">URL del portal o página a analizar:</span></label>
+                                ="bold">URL del portal o p&aacute;gina a analizar:</span></label>
                             <input id="url" class="form-control" type="url" name="url" size="80"/>
                         </p>
                         <fieldset>
                             <legend>Opciones de rastreo</legend>
 
                             <p>La profundidad y la amplitud determinan cuantas p&aacute;ginas se analizar&aacute;n
-                                en el
-                                informe (profundidad*amplitud) y c&oacute;mo se hace la selecci&oacute;n
-                                aleatoria
-                                de &eacute;stas. Si se desea analizar una p&aacute;gina en concreto se puede
-                                indicar su
-                                URL y especificar profundidad=1 y amplitud=1</p>
+                                en el informe (profundidad*amplitud) y c&oacute;mo se hace la selecci&oacute;n
+                                aleatoria de &eacute;stas. Si se desea analizar una p&aacute;gina en concreto se puede
+                                indicar su URL y especificar profundidad=1 y amplitud=1</p>
 
                             <p class="form-inline">
                                 <label for="profundidad">Profundidad:</label>
@@ -249,10 +237,8 @@
 
                             <p>Si desea que la selecci&oacute;n aleatoria de p&aacute;ginas se realice dentro
                                 del &uacute;ltimo &quot;directorio&quot; (hasta la &uacute;ltima &quot;/&quot;)
-                                indicado
-                                en la URL (por ejemplo http://www.dominio.com/directorio/pagina), marque la
-                                siguiente
-                                opci&oacute;n.</p>
+                                indicado en la URL (por ejemplo http://www.dominio.com/directorio/pagina), marque la
+                                siguiente opci&oacute;n.</p>
 
                             <p>
                                 <label for="inDirectory">
@@ -267,36 +253,38 @@
                 </fieldset>
 
                 <fieldset class="servicioAccesibilidad" id="urlset">
-                    <legend>Análisis de conjunto de URLs</legend>
+                    <legend>An&aacute;lisis de conjunto de URLs</legend>
                     <div>
-                        <p><label for="urls"><span class="bold">Listado de páginas a analizar:</span><br/></label>
+                        <p><label for="urls"><span class="bold">Listado de p&aacute;ginas a analizar:</span><br/></label>
                             <textarea id="urls" class="form-control" name="urls" rows="10" cols="50"></textarea>
-                            <span style="display: block; padding-left: 5px">Introduce una URL por línea</span>
+                            <span style="display: block; padding-left: 5px">Introduce una URL por l&iacute;nea</span>
                         </p>
                     </div>
                 </fieldset>
 
                 <fieldset class="servicioAccesibilidad" id="source">
-                    <legend>Análisis de código fuente</legend>
+                    <legend>An&aacute;lisis de c&oacute;digo fuente</legend>
                     <div>
-                        <p><label for="content"><span class="bold">Código fuente a analizar:</span><br/></label>
+                        <!-- <p><label for="content"><span class="bold">C&oacute;digo fuente a analizar:</span><br/></label>
                             <textarea id="content" class="form-control" name="content" rows="10" cols="50"></textarea>
+                        </p> -->
+                        <p><label for="content"><span class="bold">C&oacute;digo fuente a analizar:</span><br/></label>
+                            <input id="content" class="form-control" name="content" type="file" />
                         </p>
                     </div>
                 </fieldset>
 
                 <fieldset class="servicioAccesibilidad" id="historico">
-                    <legend>Histórico</legend>
-                    <p>El servicio de diagnóstico puede guardar el resultado del análisis
-                        asociándolo a la
+                    <legend>Hist&oacute;rico</legend>
+                    <p>El servicio de diagn&oacute;stico puede guardar el resultado del an&aacute;lisis
+                        asoci&aacute;ndolo a la
                         url (p. ej. para www.dominio.es) e incorporar en el informe su evolutivo
-                        respecto a
-                        ejecuciones anteriores.</p>
+                        respecto a ejecuciones anteriores.</p>
                     <input id="registerAnalysis" type="checkbox" name="registerAnalysis"
                            value="true"/>
                     <label id="lb-registerAnalysis" for="registerAnalysis"
                            style="padding-left: 7px">
-                        <span class="bold">Añadir al histórico</span>
+                        <span class="bold">Añadir al hist&oacute;rico</span>
                     </label>
                     <span class="help-block">Guarda los resultados y añade el evolutivo en el informe.</span>
                 </fieldset>
@@ -304,7 +292,7 @@
                 <fieldset class="servicioAccesibilidad">
                     <legend>Tipo de informe</legend>
 
-                    <p>El servicio generará un informe con el detalle de todos los problemas según la metodología de
+                    <p>El servicio generar&aacute; un informe con el detalle de todos los problemas seg&uacute;n la metodolog&iacute;a de
                         alguno de los siguientes Observatorios de Accesibilidad:</p>
 
                     <ul class="informes">
@@ -313,7 +301,7 @@
                             <label for="informe-obs-2"><b>Observatorio UNE 2012</b></label>
                             <span class="help-block">
                                 Informe conforme a la <a
-                                    href="http://administracionelectronica.gob.es/PAe/accesibilidad/metodologiaUNE2012">metodología
+                                    href="http://administracionelectronica.gob.es/PAe/accesibilidad/metodologiaUNE2012">metodolog&iacute;a
                                 del Observatorio de Accesibilidad, basada en la UNE 139803:2012</a>.
                             </span>
                         </li>
@@ -322,22 +310,22 @@
                             <label for="informe-obs"><b>Observatorio UNE 2004</b></label>
                             <span class="help-block">
                                 Informe conforme a la <a
-                                    href="http://administracionelectronica.gob.es/PAe/accesibilidad/metodologiaUNE2004">metodología
+                                    href="http://administracionelectronica.gob.es/PAe/accesibilidad/metodologiaUNE2004">metodolog&iacute;a
                                 del Observatorio de Accesibilidad, basada en la UNE 139803:2004</a>.
                             </span>
                         </li>
                     </ul>
 
                     <div>
-                        <p>Otras opciones de configuración:</p>
+                        <p>Otras opciones de configuraci&oacute;n:</p>
                         <ul class="informes">
                             <li>
                                 <input id="informe-nobroken" type="checkbox" name="informe-nobroken" value="true"
                                        checked="checked">
-                                <label for="informe-nobroken"><strong>Sin comprobación de enlaces rotos</strong></label>
+                                <label for="informe-nobroken"><strong>Sin comprobaci&oacute;n de enlaces rotos</strong></label>
                                 <span class="help-block">
-                                    Acelera la ejecución del servicio de diagnóstico al no verificar todos los enlaces
-                                    existentes en la página analizada.
+                                    Acelera la ejecuci&oacute;n del servicio de diagn&oacute;stico al no verificar todos los enlaces
+                                    existentes en la p&aacute;gina analizada.
                                 </span>
                             </li>
                         </ul>
