--- a/oaw_2017_2018/portal/src/main/webapp/diagnostico.html
+++ b/oaw_2017_2018/portal/src/main/webapp/diagnostico.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="es" lang="es">
 <head>
 <title>RASTREADOR WEB - Servicio de diagn&oacute;stico</title>
-<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <meta name="keywords" content="inteco,malware,rastreador" />
 <meta name="version" content="3.5.0" />
 <!-- Bootstrap -->
@@ -266,11 +266,11 @@ fieldset p {
 						<input id="registerAnalysis" type="checkbox"
 							name="registerAnalysis" value="true" disabled="true" /> <label
 							id="lb-registerAnalysis" for="registerAnalysis"
-							style="padding-left: 7px"> <span class="bold">Añadir
-								al hist&oacute;rico <span id="disabled_info">(Esta opción
-									solo está disponible para análisis de 17 páginas)</span>
+							style="padding-left: 7px"> <span class="bold">AÃ±adir
+								al hist&oacute;rico <span id="disabled_info">(Esta opciÃ³n
+									solo estÃ¡ disponible para anÃ¡lisis de 17 pÃ¡ginas)</span>
 						</span>
-						</label> <span class="help-block">Guarda los resultados y añade el
+						</label> <span class="help-block">Guarda los resultados y aÃ±ade el
 							evolutivo en el informe.</span>
 					</fieldset>
 
@@ -283,16 +283,16 @@ fieldset p {
 
 						<ul class="informes">
 
-							<!-- Nueva metodología -->
+							<!-- Nueva metodologÃ­a -->
 
-							<li><input id="informe-obs-3" type="radio" name="informe"
+<!-- 							<li><input id="informe-obs-3" type="radio" name="informe"
 								value="observatorio-3" checked> <label
 									for="informe-obs-3">Observatorio UNE 2017</label> <span
 									class="help-block"> Informe conforme a la <a
 										href="http://administracionelectronica.gob.es/PAe/accesibilidad/metodologiaUNE2012">metodolog&iacute;a
 											del Observatorio de Accesibilidad, basada en la UNE
 											139803:2012</a>.
-								</span></li>
+								</span></li> -->
 
 
 							<li><input id="informe-obs-2" type="radio" name="informe"
