--- a/oaw_2017_2018/portal/src/main/webapp/diagnostico.html
+++ b/oaw_2017_2018/portal/src/main/webapp/diagnostico.html
@@ -285,14 +285,14 @@ fieldset p {
 
 							<!-- Nueva metodología -->
 
- 							<li><input id="informe-obs-3" type="radio" name="informe"
+<!--  							<li><input id="informe-obs-3" type="radio" name="informe"
 								value="observatorio-3" checked> <label
 									for="informe-obs-3">Observatorio UNE 2017</label> <span
 									class="help-block"> Informe conforme a la <a
 										href="http://administracionelectronica.gob.es/PAe/accesibilidad/metodologiaUNE2012">metodolog&iacute;a
 											del Observatorio de Accesibilidad, basada en la UNE
 											139803:2012</a>.
-								</span></li> 
+								</span></li>  -->
 
 
 							<li><input id="informe-obs-2" type="radio" name="informe"
