--- a/oaw_2017_2018/portal/src/main/webapp/html/calendar.html
+++ b/oaw_2017_2018/portal/src/main/webapp/html/calendar.html
@@ -17,7 +17,7 @@ Email: observ.accesibilidad@correo.gob.es
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 
 
-<title>INTECO | calendario</title>
+<title>OAW | calendario</title>
 
 <script type="text/javascript">
 
