Mejoras en la interfaz

--- a/oaw_2017_2018/portal/src/main/webapp/diagnostico.html
+++ b/oaw_2017_2018/portal/src/main/webapp/diagnostico.html
@@ -342,6 +342,7 @@ fieldset p {
 						<input id="usuario" name="usuario" type="hidden"
 							value="diagnostico" /> <input name="submit" type="submit"
 							value="Solicitar informe" class="btn btn-primary btn-lg" />
+							<a href="/oaw/secure/CargarObservatorio.do" class="btn btn-default btn-lg">Volver</a>
 					</p>
 				</form>
 				<script type="text/javascript">
