--- a/oaw_2017_2018/portal/src/main/webapp/diagnostico.html
+++ b/oaw_2017_2018/portal/src/main/webapp/diagnostico.html
@@ -299,7 +299,7 @@ fieldset p {
 
   							<li><input id="informe-obs-3" type="radio" name="informe"
 								value="observatorio-3" checked> <label
-									for="informe-obs-3">Observatorio UNE 2012 B</label> <span
+									for="informe-obs-3">Observatorio UNE 2012 Beta</label> <span
 									class="help-block"> Informe conforme a la <a
 										href="http://administracionelectronica.gob.es/PAe/accesibilidad/metodologiaUNE2012">metodolog&iacute;a
 											del Observatorio de Accesibilidad, basada en la UNE
