--- a/oaw_2017_2018/portal/src/main/webapp/diagnostico.html
+++ b/oaw_2017_2018/portal/src/main/webapp/diagnostico.html
@@ -308,7 +308,7 @@ fieldset p {
 
 
 							<li><input id="informe-obs-2" type="radio" name="informe"
-								value="observatorio-2" checked> <label
+								value="observatorio-2"> <label
 									for="informe-obs-2">Observatorio UNE 2012</label> <span
 									class="help-block"> Informe conforme a la <a
 										href="http://administracionelectronica.gob.es/PAe/accesibilidad/metodologiaUNE2012">metodolog&iacute;a
