--- a/oaw_2017_2018/portal/src/main/webapp/diagnostico.html
+++ b/oaw_2017_2018/portal/src/main/webapp/diagnostico.html
@@ -263,7 +263,7 @@ fieldset p {
 						<div>
 							<p>
 								<label for="content"><span class="bold">C&oacute;digo
-										fuente a analizar:</span><br /></label> <input id="content"
+										fuente a analizar (tama&ntilde;o m&aacute;ximo del fichero 4MB):</span><br /></label> <input id="content"
 									class="form-control" name="content" type="file" />
 							</p>
 						</div>
