Añadida cadena adicional para detectar mapa web
Modificado textos nueva metodología para emails servicio de diagnóstico

--- a/oaw_2017_2018/portal/src/main/webapp/diagnostico.html
+++ b/oaw_2017_2018/portal/src/main/webapp/diagnostico.html
@@ -299,7 +299,7 @@ fieldset p {
 
   							<li><input id="informe-obs-3" type="radio" name="informe"
 								value="observatorio-3" checked> <label
-									for="informe-obs-3">Observatorio UNE 2012 Beta</label> <span
+									for="informe-obs-3">Observatorio UNE 2012 (versi&oacute;n 2)</label> <span
 									class="help-block"> Informe conforme a la <a
 										href="http://administracionelectronica.gob.es/PAe/accesibilidad/metodologiaUNE2012">metodolog&iacute;a
 											del Observatorio de Accesibilidad, basada en la UNE
@@ -309,7 +309,7 @@ fieldset p {
 
 							<li><input id="informe-obs-2" type="radio" name="informe"
 								value="observatorio-2"> <label
-									for="informe-obs-2">Observatorio UNE 2012</label> <span
+									for="informe-obs-2">Observatorio UNE 2012 (antigua)</label> <span
 									class="help-block"> Informe conforme a la <a
 										href="http://administracionelectronica.gob.es/PAe/accesibilidad/metodologiaUNE2012">metodolog&iacute;a
 											del Observatorio de Accesibilidad, basada en la UNE
