Cambios en las JSP de conexión del servicio de diagnóstico
Codificación de & en lista de URLs en Servicio de diagnóstico

Modificada comporbación de tablas bidireccionales y método de creación de matriz de celdas para comporbaciones de tablas de datos

--- a/oaw_2017_2018/portal/src/main/webapp/diagnostico.html
+++ b/oaw_2017_2018/portal/src/main/webapp/diagnostico.html
@@ -462,6 +462,11 @@ fieldset p {
           } else if ($("#radio-2").prop("checked")) {
             $("#url").val("");
             $("#content").val("");
+            var domains = $("#urls").val();
+            var res = domains.replace(/&/g, "%26");
+            $("#urls").val(res);
+            
+            
           } else if ($("#radio-3").prop("checked")) {
             $("#url").val("");
             $("#urls").val("");
