--- a/oaw_2017_2018/portal/src/main/webapp/diagnostico.html
+++ b/oaw_2017_2018/portal/src/main/webapp/diagnostico.html
@@ -30,8 +30,8 @@ you may find it at http://eur-lex.europa.eu/legal-content/EN/TXT/?uri=CELEX:3201
 		<h1>
 			<img class="pull-left" src="/oaw/images/logo.jpg"
 				alt="Observatorio de Accesibilidad Web" /> <img
-				src="/oaw/images/mhfp.gif"
-				alt="MINHAFP - Ministerio de Hacienda y Funci&oacute;n P&uacute;blica" />
+				src="/oaw/images/logo-mptfp.png"
+				alt="MINHAFP - Ministerio de Pol&iacute;tica Territorial y Funci&oacute;n P&uacute;blica" />
 		</h1>
 	</div>
 	<!-- fin cabecera -->
@@ -359,7 +359,7 @@ fieldset p {
 	<div id="pie">
 		<div id="creditos">
 			Copyright &#169; 2018 - <span class="negrita">Ministerio de
-				Hacienda y Funci&oacute;n P&uacute;blica</span>
+				Pol&iacute;tica Territorial y Funci&oacute;n P&uacute;blica</span>
 		</div>
 	</div>
 	<script type="application/javascript">
