--- a/oaw_2017_2018/portal/src/main/webapp/diagnostico.html
+++ b/oaw_2017_2018/portal/src/main/webapp/diagnostico.html
@@ -31,7 +31,7 @@ you may find it at http://eur-lex.europa.eu/legal-content/EN/TXT/?uri=CELEX:3201
 			<img class="pull-left" src="/oaw/images/logo.jpg"
 				alt="Observatorio de Accesibilidad Web" /> <img
 				src="/oaw/images/logo-mptfp.png"
-				alt="MINHAFP - Ministerio de Pol&iacute;tica Territorial y Funci&oacute;n P&uacute;blica" />
+				alt="MINHAFP - Ministerio de Pol&iacute;tica Territorial y Funci&oacute;n P&uacute;blica" width="265px"/>
 		</h1>
 	</div>
 	<!-- fin cabecera -->
