--- a/oaw_2017_2018/portal/src/main/webapp/diagnostico.html
+++ b/oaw_2017_2018/portal/src/main/webapp/diagnostico.html
@@ -30,7 +30,7 @@ you may find it at http://eur-lex.europa.eu/legal-content/EN/TXT/?uri=CELEX:3201
 		<h1>
 			<img class="pull-left" src="/oaw/images/logo.jpg"
 				alt="Observatorio de Accesibilidad Web" /> <img
-				src="/oaw/images/logo-mptfp.png"
+				src="/oaw/images/logo-mptfp.png" width="265px"
 				alt="MINHAFP - Ministerio de Pol&iacute;tica Territorial y Funci&oacute;n P&uacute;blica" />
 		</h1>
 	</div>
