--- a/oaw_2017_2018/portal/src/main/webapp/diagnostico.html
+++ b/oaw_2017_2018/portal/src/main/webapp/diagnostico.html
@@ -16,7 +16,7 @@ you may find it at http://eur-lex.europa.eu/legal-content/EN/TXT/?uri=CELEX:3201
 <title>RASTREADOR WEB - Servicio de diagn&oacute;stico</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <meta name="keywords" content="inteco,malware,rastreador" />
-<meta name="version" content="3.5.0" />
+<meta name="version" content="4.2.1" />
 <!-- Bootstrap -->
 <link href="/oaw/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="styles/estilo.css" />
@@ -359,7 +359,7 @@ fieldset p {
 	<div id="pie">
 		<div id="creditos">
 			Copyright &#169; 2018 - <span class="negrita">Ministerio de
-				Pol&iacute;tica Territorial y Funci&oacute;n P&uacute;blica</span>
+				Pol&iacute;tica Territorial y Funci&oacute;n P&uacute;blica</span>  &nbsp; Versi&#243;n: <b>4.2.1</b> 
 		</div>
 	</div>
 	<script type="application/javascript">
