--- a/portal/src/main/webapp/diagnostico.html
+++ b/portal/src/main/webapp/diagnostico.html
@@ -117,8 +117,7 @@ fieldset p {
 	background-color: #fff;
 }
 
-#cajaformularios fieldset.servicioAccesibilidad, #cajaformularios fieldset.servicioAccesibilidad fieldset
-	{
+#cajaformularios fieldset.servicioAccesibilidad, #cajaformularios fieldset.servicioAccesibilidad fieldset {
 	border: 1px solid #e5e5e5;
 	margin-top: 25px;
 	padding: 15px 25px;
@@ -300,22 +299,30 @@ fieldset p {
 
 							<!-- Nueva metodología -->
 
+							<li><input id="informe-obs-5" type="radio" name="informe"
+								value="observatorio-5"> <label for="informe-obs-5">Comprobaciones
+										Accesibilidad (beta) </label><span class="help-block"> Informe
+									conforme a las comprobaciones 2.3 de la <a
+									href="http://administracionelectronica.gob.es/PAe/accesibilidad/metodologiaUNE2012v2">metodolog&iacute;a
+										del Observatorio de Accesibilidad, basada en la UNE
+										139803:2012</a>.
+							</span></li>
 
-
-							<li><input id="informe-obs-3" type="radio" name="informe"
-								value="observatorio-3" checked> <label
-									for="informe-obs-3">Observatorio UNE-EN301549:2019 (beta)</label> <span class="help-block"> Informe
-										conforme a la <a
+							<li><input id="informe-obs-4" type="radio" name="informe"
+								value="observatorio-4" checked> <label
+									for="informe-obs-4">Observatorio UNE-EN301549:2019
+										(beta)</label> <span class="help-block"> Informe conforme a la
+										<a
 										href="http://administracionelectronica.gob.es/PAe/accesibilidad/metodologiaUNE2012v2">metodolog&iacute;a
-											del Observatorio de Accesibilidad, basada en la UNE-EN301549:2019</a>.
+											del Observatorio de Accesibilidad, basada en la
+											UNE-EN301549:2019</a>.
 								</span></li>
 
 
 							<li><input id="informe-obs-3" type="radio" name="informe"
-								value="observatorio-3" checked> <label
-									for="informe-obs-3">Observatorio UNE 2012
-										(versi&oacute;n 2)</label> <span class="help-block"> Informe
-										conforme a la <a
+								value="observatorio-3"> <label for="informe-obs-3">Observatorio
+										UNE 2012 (versi&oacute;n 2)</label> <span class="help-block">
+										Informe conforme a la <a
 										href="http://administracionelectronica.gob.es/PAe/accesibilidad/metodologiaUNE2012v2">metodolog&iacute;a
 											del Observatorio de Accesibilidad, basada en la UNE
 											139803:2012</a>.
@@ -381,7 +388,7 @@ fieldset p {
 	</div>
 	<script type="application/javascript">
 	<!--
-		
+										
 	
 
 		$("#informe-obs-3").click(function () {
@@ -499,6 +506,10 @@ fieldset p {
 	
 	
 	
+	
+	
+	
+	
 	</script>
 	<!-- Bootstrap core JavaScript -->
 	<!-- Placed at the end of the document so the pages load faster -->
@@ -507,7 +518,15 @@ fieldset p {
 	<script type="application/javascript">
 		
 		
+		
+		
+		
+		
 		$(function () { $('[data-toggle="tooltip"]').tooltip() })
+	
+	
+	
+	
 	
 	
 	</script>
