Apply complex in crawler job
Former-commit-id: 958302f8c49decfb153ebae02111ddbdb81da98f

--- a/portal/src/main/webapp/diagnostico.html
+++ b/portal/src/main/webapp/diagnostico.html
@@ -383,7 +383,7 @@ fieldset p {
 		<div id="creditos">
 			Copyright &#169; 2019 - <span class="negrita">Ministerio de
 				Pol&iacute;tica Territorial y Funci&oacute;n P&uacute;blica</span> &nbsp;
-			Versi&#243;n: <b>5.0.0</b>
+			Versi&#243;n: <b>5.0.0-beta1</b>
 		</div>
 	</div>
 	<script type="application/javascript">
